log
Thu 20 Apr 2023 09:37:46 PM UTC: 
 tests:  1|8
total_score: 0/70
6d7ec07
Fri 21 Apr 2023 12:31:04 AM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:10: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   42 |   newTree->root = NULL;
      |          ^~
treemap.c:41:34: note: referencing an object of size 8 allocated by ‘malloc’
   41 |   TreeMap *newTree = (TreeMap *) malloc(sizeof(TreeMap*));
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:43:10: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   43 |   newTree->current = NULL;
      |          ^~
treemap.c:41:34: note: referencing an object of size 8 allocated by ‘malloc’
   41 |   TreeMap *newTree = (TreeMap *) malloc(sizeof(TreeMap*));
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:45:10: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   45 |   newTree->lower_than = lower_than;
      |          ^~
treemap.c:41:34: note: referencing an object of size 8 allocated by ‘malloc’
   41 |   TreeMap *newTree = (TreeMap *) malloc(sizeof(TreeMap*));
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3773f0d
Fri 21 Apr 2023 12:32:45 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
70296a8
